# PetPhrase

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  panel.html  pet.html  preview.html  settings.html  vite.config.ts
.superpowers/brainstorm/: .last-token
.superpowers/brainstorm/969-1783169615/content/: groups-overflow.html  longtext-preview.html  panel-layout.html  visual-style.html  waiting.html
.superpowers/brainstorm/969-1783169615/state/: server-info  server-instance-id
app-slint/: Cargo.toml  build.rs  installer.nsi
app-slint/pets/default/: pet.json
app-slint/src/: anim.rs  logic.rs  main.rs  pet_loader.rs  storage.rs  updater.rs
app-slint/ui/: app.slint  common.slint  panel.slint  pet.slint  preview.slint  settings.slint
docs/: tech-brief.md
docs/superpowers/plans/: 2026-07-04-petphrase.md
docs/superpowers/specs/: 2026-07-04-petphrase-design.md
scripts/: gen_default_pet.py  gen_social_preview.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  pet_loader.rs
src/panel/: logic.test.ts  logic.ts  panel.css  panel.ts
src/pet/: animator.test.ts  animator.ts  pet.css  pet.ts
src/preview/: preview.css  preview.ts
src/settings/: settings.css  settings.ts
src/shared/: icons.ts  ipc.ts  tokens.css  types.ts
