[package]
name = "petphrase-slint"
version = "0.2.0"
description = "PetPhrase 桌宠常用语工具(Slint 原生版)"
edition = "2021"

[dependencies]
slint = { version = "1", features = ["unstable-winit-030", "image-default-formats"] }
window-vibrancy = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
tray-icon = "0.21"
auto-launch = "0.5"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
single-instance = "0.3"

[build-dependencies]
slint-build = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
